[gd_scene load_steps=4 format=3 uid="uid://cpu6frat1qktu"]

[ext_resource type="Script" path="res://Script/AngerShadow.gd" id="1_decky"]
[ext_resource type="Texture2D" uid="uid://cxhrnrsi061xq" path="res://icon.svg" id="2_0bn4b"]
[ext_resource type="PackedScene" uid="uid://dtmnqp3oqf2ce" path="res://Szene/firetrail.tscn" id="3_jsoal"]

[node name="CharacterBody2D" type="CharacterBody2D" groups=["shadow"]]
script = ExtResource("1_decky")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-4, 3, 5, 1, -1, -1)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox"]
polygon = PackedVector2Array(-4, 3, 5, 1, -1, -1)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.500002, 0.5)
scale = Vector2(0.164063, 0.164062)
texture = ExtResource("2_0bn4b")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Line2D" parent="." instance=ExtResource("3_jsoal")]

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="body_entered" from="Line2D" to="." method="_on_line_2d_body_entered"]
